chore: use updated alias for Product components

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,8 +2,7 @@
   "compilerOptions": {
     "paths": {
       "@/*": ["./src/*"],
-      "@/context/*": ["./context/*"],
-      "@/components/*": ["./src/components/ui/*"]
+      "@/context/*": ["./context/*"]
     }
   }
 }
